--- a/record.ipynb
+++ b/record.ipynb
@@ -469,22 +469,21 @@
      "output_type": "stream",
      "text": [
       "New player: David\n",
-      "New player: JZT\n",
       "\n",
       "Money won: 447.40\n",
       "Money lost: 440.60\n",
       "\n",
       "Rating\tSigma\tName\n",
-      "1847.56\t184.22\tGilbert\n",
-      "1838.91\t110.76\tChen Meng\n",
-      "1809.77\t103.15\tShengke Zhou\n",
-      "1749.21\t147.20\tJianfeng Guo\n",
-      "1724.50\t131.71\tXin Qiu\n",
+      "1846.05\t184.23\tGilbert\n",
+      "1838.57\t110.77\tChen Meng\n",
+      "1809.38\t103.16\tShengke Zhou\n",
+      "1748.75\t147.23\tJianfeng Guo\n",
+      "1723.79\t131.72\tXin Qiu\n",
       "1708.63\t239.67\tEllen Wei (absent: 2)\n",
       "1697.10\t188.58\tPeter Zhou (absent: 3)\n",
-      "1649.57\t132.15\tYuan Zhuang\n",
-      "1630.53\t103.23\tShu Zhou\n",
-      "1602.92\t91.92\tGuxin Jin\n"
+      "1648.51\t132.15\tYuan Zhuang\n",
+      "1629.77\t103.23\tShu Zhou\n",
+      "1602.20\t91.91\tGuxin Jin\n"
      ]
     }
    ],
@@ -497,7 +496,7 @@
     "    chaofeng_zhou: -64.8,\n",
     "    yuan_zhuang: 5,\n",
     "    tom: 24,\n",
-    "    \"JZT\": -43,\n",
+    "    zhongtian_jiang: -43,\n",
     "    \"Samuel\": -25,\n",
     "    di_an: -87,\n",
     "    xiner_zhang: -80,\n",
@@ -511,6 +510,52 @@
     "    shengke_zhou: 51.8,\n",
     "    chen_meng: 105,\n",
     "}) \n",
+    "\n",
+    "print_top_k_rating(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New player: George\n",
+      "\n",
+      "Money won: 248.20\n",
+      "Money lost: 247.80\n",
+      "\n",
+      "Rating\tSigma\tName\n",
+      "1846.05\t184.23\tGilbert (absent: 1)\n",
+      "1838.57\t110.77\tChen Meng (absent: 1)\n",
+      "1823.03\t136.08\tJianfeng Guo\n",
+      "1809.38\t103.16\tShengke Zhou (absent: 1)\n",
+      "1702.24\t119.76\tXin Qiu\n",
+      "1648.51\t132.15\tYuan Zhuang (absent: 1)\n",
+      "1629.77\t103.23\tShu Zhou (absent: 1)\n",
+      "1602.20\t91.91\tGuxin Jin (absent: 1)\n",
+      "1591.54\t185.32\tWilliam Tang (absent: 3)\n",
+      "1572.85\t185.27\tEllen Wei\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2019-10-31\n",
+    "\n",
+    "Game({\n",
+    "    jianfeng_guo: 98.8,\n",
+    "    tom: 0,\n",
+    "    lucas_li: 38.4,\n",
+    "    chaofeng_zhou: 94.8,\n",
+    "    zhongtian_jiang: -137,\n",
+    "    ellen_wei: -2.8,\n",
+    "    \"George\": -40,\n",
+    "    xin_qiu: 16.2,\n",
+    "    quanlai_li: -68\n",
+    "})\n",
     "\n",
     "print_top_k_rating(10)"
    ]
