Complete Ellen record

--- a/record.ipynb
+++ b/record.ipynb
@@ -190,9 +190,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "New player: Ellen Wei\n",
       "New player: William Tang\n",
       "New player: Yuan Zhuang\n",
-      "New player: Ellen\n",
       "New player: Xiner\n",
       "\n",
       "Money won: 259.40\n",
@@ -212,7 +212,7 @@
     "Game({\n",
     "    \"Tom\": 49,\n",
     "    \"William Tang\": -22,\n",
-    "    \"Ellen\": -40,\n",
+    "    \"Ellen Wei\": -40,\n",
     "    \"Yuan Zhuang\": -4,\n",
     "    \"Quanlai Li\": -80,\n",
     "    \"Xiner\": -9.4,\n",
@@ -346,7 +346,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New player: Ellen Wei\n",
       "New player: Affab Hafreez\n",
       "New player: Samuel\n",
       "New player: Zhongtian Jiang\n",
@@ -356,15 +355,15 @@
       "\n",
       "Rating\tSigma\tName\n",
       "1955.38\t252.89\tGilbert (absent: 1)\n",
-      "1863.52\t133.92\tChen Meng\n",
-      "1817.77\t122.04\tShengke Zhou\n",
-      "1760.66\t120.90\tShu Zhou\n",
+      "1858.49\t133.98\tChen Meng\n",
+      "1814.52\t122.15\tShengke Zhou\n",
       "1758.52\t242.95\tXiner Zhang (absent: 1)\n",
+      "1755.47\t120.87\tShu Zhou\n",
       "1715.93\t248.80\tLin Zhou (absent: 2)\n",
-      "1708.63\t239.67\tEllen Wei\n",
-      "1707.70\t181.66\tXin Qiu\n",
+      "1698.07\t181.38\tXin Qiu\n",
       "1697.10\t188.58\tPeter Zhou (absent: 1)\n",
-      "1591.54\t185.32\tWilliam Tang\n"
+      "1577.53\t184.97\tWilliam Tang\n",
+      "1573.87\t166.86\tJianfeng Guo (absent: 1)\n"
      ]
     }
    ],
@@ -418,15 +417,15 @@
       "\n",
       "Rating\tSigma\tName\n",
       "1955.38\t252.89\tGilbert (absent: 2)\n",
-      "1801.78\t111.34\tShengke Zhou\n",
-      "1800.43\t120.08\tChen Meng\n",
+      "1798.46\t111.43\tShengke Zhou\n",
+      "1795.70\t120.12\tChen Meng\n",
       "1758.52\t242.95\tXiner Zhang (absent: 2)\n",
       "1715.93\t248.80\tLin Zhou (absent: 3)\n",
-      "1708.63\t239.67\tEllen Wei (absent: 1)\n",
-      "1699.05\t150.73\tXin Qiu\n",
       "1697.10\t188.58\tPeter Zhou (absent: 2)\n",
-      "1655.13\t151.81\tYuan Zhuang\n",
-      "1640.05\t111.73\tShu Zhou\n"
+      "1691.50\t150.57\tXin Qiu\n",
+      "1653.97\t151.81\tYuan Zhuang\n",
+      "1635.34\t111.71\tShu Zhou\n",
+      "1609.87\t97.63\tGuxin Jin\n"
      ]
     }
    ],
@@ -474,16 +473,16 @@
       "Money lost: 440.60\n",
       "\n",
       "Rating\tSigma\tName\n",
-      "1846.05\t184.23\tGilbert\n",
-      "1838.57\t110.77\tChen Meng\n",
-      "1809.38\t103.16\tShengke Zhou\n",
-      "1748.75\t147.23\tJianfeng Guo\n",
-      "1723.79\t131.72\tXin Qiu\n",
-      "1708.63\t239.67\tEllen Wei (absent: 2)\n",
+      "1844.28\t184.23\tGilbert\n",
+      "1834.13\t110.80\tChen Meng\n",
+      "1806.04\t103.22\tShengke Zhou\n",
+      "1747.90\t147.25\tJianfeng Guo\n",
+      "1717.27\t131.61\tXin Qiu\n",
       "1697.10\t188.58\tPeter Zhou (absent: 3)\n",
-      "1648.51\t132.15\tYuan Zhuang\n",
-      "1629.77\t103.23\tShu Zhou\n",
-      "1602.20\t91.91\tGuxin Jin\n"
+      "1646.72\t132.15\tYuan Zhuang\n",
+      "1625.26\t103.21\tShu Zhou\n",
+      "1598.02\t91.86\tGuxin Jin\n",
+      "1577.53\t184.97\tWilliam Tang (absent: 2)\n"
      ]
     }
    ],
@@ -516,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -529,16 +528,16 @@
       "Money lost: 247.80\n",
       "\n",
       "Rating\tSigma\tName\n",
-      "1846.05\t184.23\tGilbert (absent: 1)\n",
-      "1838.57\t110.77\tChen Meng (absent: 1)\n",
-      "1823.03\t136.08\tJianfeng Guo\n",
-      "1809.38\t103.16\tShengke Zhou (absent: 1)\n",
-      "1702.24\t119.76\tXin Qiu\n",
-      "1648.51\t132.15\tYuan Zhuang (absent: 1)\n",
-      "1629.77\t103.23\tShu Zhou (absent: 1)\n",
-      "1602.20\t91.91\tGuxin Jin (absent: 1)\n",
-      "1591.54\t185.32\tWilliam Tang (absent: 3)\n",
-      "1572.85\t185.27\tEllen Wei\n"
+      "1844.28\t184.23\tGilbert (absent: 1)\n",
+      "1834.13\t110.80\tChen Meng (absent: 1)\n",
+      "1820.23\t136.24\tJianfeng Guo\n",
+      "1806.04\t103.22\tShengke Zhou (absent: 1)\n",
+      "1693.29\t119.70\tXin Qiu\n",
+      "1646.72\t132.15\tYuan Zhuang (absent: 1)\n",
+      "1625.26\t103.21\tShu Zhou (absent: 1)\n",
+      "1598.02\t91.86\tGuxin Jin (absent: 1)\n",
+      "1577.53\t184.97\tWilliam Tang (absent: 3)\n",
+      "1556.48\t100.86\tChaofeng Zhou\n"
      ]
     }
    ],
@@ -558,6 +557,34 @@
     "})\n",
     "\n",
     "print_top_k_rating(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Gain\tAvg\tName\n",
+      "348.50\t43.56\tShengke Zhou\n",
+      "340.30\t48.61\tChen Meng\n",
+      "229.40\t45.88\tJianfeng Guo\n",
+      "162.60\t20.32\tChaofeng Zhou\n",
+      "110.00\t55.00\tGilbert\n",
+      "107.60\t21.52\tXin Qiu\n",
+      "105.20\t13.15\tShu Zhou\n",
+      "80.80\t8.08\tGuxin Jin\n",
+      "69.40\t17.35\tYuan Zhuang\n",
+      "26.00\t13.00\tWilliam Tang\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_top_k_score(10)"
    ]
   },
   {
