--- a/record.ipynb
+++ b/record.ipynb
@@ -589,6 +589,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Money won: 188.20\n",
+      "Money lost: 186.60\n",
+      "\n",
+      "Rating\tSigma\tName\n",
+      "1891.30\t127.00\tJianfeng Guo\n",
+      "1844.28\t184.23\tGilbert (absent: 2)\n",
+      "1824.62\t97.75\tShengke Zhou\n",
+      "1768.51\t102.91\tChen Meng\n",
+      "1649.66\t97.15\tShu Zhou\n",
+      "1646.72\t132.15\tYuan Zhuang (absent: 2)\n",
+      "1590.85\t111.63\tXin Qiu\n",
+      "1565.34\t94.80\tChaofeng Zhou\n",
+      "1558.56\t87.58\tGuxin Jin\n",
+      "1546.44\t93.94\tTom (absent: 1)\n",
+      "\n",
+      "Gain\tAvg\tName\n",
+      "395.50\t43.94\tShengke Zhou\n",
+      "335.80\t55.97\tJianfeng Guo\n",
+      "326.30\t40.79\tChen Meng\n",
+      "164.20\t18.24\tChaofeng Zhou\n",
+      "129.60\t14.40\tShu Zhou\n",
+      "110.00\t55.00\tGilbert\n",
+      "69.40\t17.35\tYuan Zhuang\n",
+      "45.60\t4.15\tGuxin Jin\n",
+      "13.60\t2.27\tXin Qiu\n",
+      "-13.30\t-13.30\tYunke Tang\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2019-11-01\n",
+    "\n",
+    "Game({\n",
+    "    zhongtian_jiang: -30.2,\n",
+    "    xin_qiu: -94,\n",
+    "    xiner_zhang: -0.2,\n",
+    "    chen_meng: -14,\n",
+    "    quanlai_li: 8.8,\n",
+    "    shengke_zhou: 47,\n",
+    "    jianfeng_guo: 106.4,\n",
+    "    chaofeng_zhou: 1.6,\n",
+    "    lucas_li: -13,\n",
+    "    shu_zhou: 24.4,\n",
+    "    guxin_jin: -35.2\n",
+    "})\n",
+    "\n",
+    "print_top_k_rating(10)\n",
+    "print_top_k_score(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Rating\tSigma\tName\n",
+      "1891.30\t127.00\tJianfeng Guo\n",
+      "1844.28\t184.23\tGilbert (absent: 2)\n",
+      "1824.62\t97.75\tShengke Zhou\n",
+      "1768.51\t102.91\tChen Meng\n",
+      "1649.66\t97.15\tShu Zhou\n",
+      "1646.72\t132.15\tYuan Zhuang (absent: 2)\n",
+      "1590.85\t111.63\tXin Qiu\n",
+      "1565.34\t94.80\tChaofeng Zhou\n",
+      "1558.56\t87.58\tGuxin Jin\n",
+      "1546.44\t93.94\tTom (absent: 1)\n",
+      "1542.52\t84.68\tLucas Li\n",
+      "1518.29\t106.31\tYingjie Ma (absent: 3)\n",
+      "1515.03\t237.40\tYunke Tang (absent: 3)\n",
+      "1492.97\t152.90\tXiner Zhang\n",
+      "1470.26\t156.56\tEllen Wei (absent: 1)\n",
+      "1459.13\t114.84\tXue Zhou (absent: 2)\n",
+      "1425.55\t236.19\tDavid (absent: 2)\n",
+      "1418.73\t238.59\tYi Mao (absent: 3)\n",
+      "1404.51\t179.00\tSamuel (absent: 2)\n",
+      "1372.52\t105.77\tDi An (absent: 2)\n",
+      "1322.47\t94.33\tQuanlai Li\n",
+      "1313.49\t254.79\tGeorge (absent: 1)\n",
+      "1200.71\t141.02\tZhongtian Jiang\n",
+      "929.36\t324.26\tZiru Liu (absent: 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_top_k_rating()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
