--- a/record.ipynb
+++ b/record.ipynb
@@ -331,14 +331,31 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'tom' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-6442900a970c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mshengke_zhou\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m147.8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mchaofeng_zhou\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m120\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0mtom\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m54.8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m     \u001b[0mjianfeng_guo\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m9.8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mdi_an\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m120\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'tom' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New player: Xiner Zhang\n",
+      "New player: Gilbert\n",
+      "New player: Xin Qiu\n",
+      "\n",
+      "Money won: 425.00\n",
+      "Money lost: 420.20\n",
+      "\n",
+      "Historical Rating\n",
+      "Rating\tSigma\tName\n",
+      "1955.38\t252.89\tGilbert\n",
+      "1814.97\t245.03\tXin Qiu\n",
+      "1807.56\t150.61\tChen Meng\n",
+      "1758.52\t242.95\tXiner Zhang\n",
+      "1720.79\t131.67\tShengke Zhou\n",
+      "\n",
+      "Seasonal Rating\n",
+      "Rating\tSigma\tName\n",
+      "1955.38\t252.89\tGilbert\n",
+      "1814.97\t245.03\tXin Qiu\n",
+      "1807.56\t150.61\tChen Meng\n",
+      "1758.52\t242.95\tXiner Zhang\n",
+      "1720.79\t131.67\tShengke Zhou\n"
      ]
     }
    ],
@@ -364,7 +381,7 @@
     "Game({\n",
     "    shengke_zhou: 147.8,\n",
     "    chaofeng_zhou: -120,\n",
-    "    tom: -54.8,\n",
+    "    tom_zhang: -54.8,\n",
     "    jianfeng_guo: 9.8,\n",
     "    di_an: -120,\n",
     "    yuan_zhuang: 5.2,\n",
@@ -394,7 +411,6 @@
      "text": [
       "New player: Affab Hafreez\n",
       "New player: Samuel\n",
-      "New player: Xin Qiu\n",
       "New player: Zhongtian Jiang\n",
       "\n",
       "Money won: 338.20\n",
@@ -402,29 +418,29 @@
       "\n",
       "Historical Rating\n",
       "Rating\tSigma\tName\n",
-      "1806.54\t150.69\tChen Meng\n",
-      "1780.28\t134.60\tShu Zhou\n",
-      "1715.93\t248.80\tLin Zhou (absent: 1)\n",
-      "1699.15\t131.28\tShengke Zhou\n",
-      "1621.40\t143.42\tChaofeng Zhou\n",
-      "1605.11\t244.06\tZYR (absent: 3)\n",
-      "1593.15\t135.56\tDi An (absent: 1)\n",
-      "1571.42\t185.02\tWilliam Tang\n",
-      "1560.83\t112.52\tGuxin Jin\n",
-      "1557.63\t243.75\tXueqing Zhang (absent: 3)\n",
+      "1955.38\t252.89\tGilbert (absent: 1)\n",
+      "1858.49\t133.98\tChen Meng\n",
+      "1814.52\t122.15\tShengke Zhou\n",
+      "1758.52\t242.95\tXiner Zhang (absent: 1)\n",
+      "1755.47\t120.87\tShu Zhou\n",
+      "1715.93\t248.80\tLin Zhou (absent: 2)\n",
+      "1698.07\t181.38\tXin Qiu\n",
+      "1697.10\t188.58\tPeter Zhou (absent: 1)\n",
+      "1577.53\t184.97\tWilliam Tang\n",
+      "1573.87\t166.86\tJianfeng Guo (absent: 1)\n",
       "\n",
       "Seasonal Rating\n",
       "Rating\tSigma\tName\n",
-      "1806.54\t150.69\tChen Meng\n",
-      "1780.28\t134.60\tShu Zhou\n",
-      "1715.93\t248.80\tLin Zhou (absent: 1)\n",
-      "1699.15\t131.28\tShengke Zhou\n",
-      "1621.40\t143.42\tChaofeng Zhou\n",
-      "1605.11\t244.06\tZYR (absent: 3)\n",
-      "1593.15\t135.56\tDi An (absent: 1)\n",
-      "1571.42\t185.02\tWilliam Tang\n",
-      "1560.83\t112.52\tGuxin Jin\n",
-      "1557.63\t243.75\tXueqing Zhang (absent: 3)\n"
+      "1955.38\t252.89\tGilbert (absent: 1)\n",
+      "1858.49\t133.98\tChen Meng\n",
+      "1814.52\t122.15\tShengke Zhou\n",
+      "1758.52\t242.95\tXiner Zhang (absent: 1)\n",
+      "1755.47\t120.87\tShu Zhou\n",
+      "1715.93\t248.80\tLin Zhou (absent: 2)\n",
+      "1698.07\t181.38\tXin Qiu\n",
+      "1697.10\t188.58\tPeter Zhou (absent: 1)\n",
+      "1577.53\t184.97\tWilliam Tang\n",
+      "1573.87\t166.86\tJianfeng Guo (absent: 1)\n"
      ]
     }
    ],
@@ -478,29 +494,29 @@
       "\n",
       "Historical Rating\n",
       "Rating\tSigma\tName\n",
-      "1743.94\t131.78\tChen Meng\n",
-      "1715.93\t248.80\tLin Zhou (absent: 2)\n",
-      "1705.41\t118.32\tShengke Zhou\n",
-      "1684.55\t183.48\tYuan Zhuang\n",
-      "1661.74\t127.11\tChaofeng Zhou\n",
-      "1633.13\t122.26\tShu Zhou\n",
-      "1621.95\t104.64\tGuxin Jin\n",
-      "1610.92\t178.51\tXin Qiu\n",
-      "1589.73\t106.39\tLucas Li\n",
-      "1571.42\t185.02\tWilliam Tang (absent: 1)\n",
+      "1955.38\t252.89\tGilbert (absent: 2)\n",
+      "1798.46\t111.43\tShengke Zhou\n",
+      "1795.70\t120.12\tChen Meng\n",
+      "1758.52\t242.95\tXiner Zhang (absent: 2)\n",
+      "1715.93\t248.80\tLin Zhou (absent: 3)\n",
+      "1697.10\t188.58\tPeter Zhou (absent: 2)\n",
+      "1691.50\t150.57\tXin Qiu\n",
+      "1653.97\t151.81\tYuan Zhuang\n",
+      "1635.34\t111.71\tShu Zhou\n",
+      "1609.87\t97.63\tGuxin Jin\n",
       "\n",
       "Seasonal Rating\n",
       "Rating\tSigma\tName\n",
-      "1743.94\t131.78\tChen Meng\n",
-      "1715.93\t248.80\tLin Zhou (absent: 2)\n",
-      "1705.41\t118.32\tShengke Zhou\n",
-      "1684.55\t183.48\tYuan Zhuang\n",
-      "1661.74\t127.11\tChaofeng Zhou\n",
-      "1633.13\t122.26\tShu Zhou\n",
-      "1621.95\t104.64\tGuxin Jin\n",
-      "1610.92\t178.51\tXin Qiu\n",
-      "1589.73\t106.39\tLucas Li\n",
-      "1571.42\t185.02\tWilliam Tang (absent: 1)\n"
+      "1955.38\t252.89\tGilbert (absent: 2)\n",
+      "1798.46\t111.43\tShengke Zhou\n",
+      "1795.70\t120.12\tChen Meng\n",
+      "1758.52\t242.95\tXiner Zhang (absent: 2)\n",
+      "1715.93\t248.80\tLin Zhou (absent: 3)\n",
+      "1697.10\t188.58\tPeter Zhou (absent: 2)\n",
+      "1691.50\t150.57\tXin Qiu\n",
+      "1653.97\t151.81\tYuan Zhuang\n",
+      "1635.34\t111.71\tShu Zhou\n",
+      "1609.87\t97.63\tGuxin Jin\n"
      ]
     }
    ],
@@ -543,37 +559,35 @@
      "output_type": "stream",
      "text": [
       "New player: David\n",
-      "New player: Gilbert\n",
-      "New player: Xiner Zhang\n",
       "\n",
       "Money won: 447.40\n",
       "Money lost: 440.60\n",
       "\n",
       "Historical Rating\n",
       "Rating\tSigma\tName\n",
-      "1792.29\t119.89\tChen Meng\n",
-      "1746.72\t175.33\tJianfeng Guo\n",
-      "1723.50\t108.67\tShengke Zhou\n",
-      "1715.93\t248.80\tLin Zhou (absent: 3)\n",
-      "1657.17\t149.15\tXin Qiu\n",
-      "1656.65\t236.81\tGilbert\n",
-      "1654.15\t151.54\tYuan Zhuang\n",
-      "1616.71\t111.37\tShu Zhou\n",
-      "1603.11\t97.63\tGuxin Jin\n",
-      "1576.46\t106.47\tTom Zhang\n",
+      "1844.28\t184.23\tGilbert\n",
+      "1834.13\t110.80\tChen Meng\n",
+      "1806.04\t103.22\tShengke Zhou\n",
+      "1747.90\t147.25\tJianfeng Guo\n",
+      "1717.27\t131.61\tXin Qiu\n",
+      "1697.10\t188.58\tPeter Zhou (absent: 3)\n",
+      "1646.72\t132.15\tYuan Zhuang\n",
+      "1625.26\t103.21\tShu Zhou\n",
+      "1598.02\t91.86\tGuxin Jin\n",
+      "1577.53\t184.97\tWilliam Tang (absent: 2)\n",
       "\n",
       "Seasonal Rating\n",
       "Rating\tSigma\tName\n",
-      "1792.29\t119.89\tChen Meng\n",
-      "1746.72\t175.33\tJianfeng Guo\n",
-      "1723.50\t108.67\tShengke Zhou\n",
-      "1715.93\t248.80\tLin Zhou (absent: 3)\n",
-      "1657.17\t149.15\tXin Qiu\n",
-      "1656.65\t236.81\tGilbert\n",
-      "1654.15\t151.54\tYuan Zhuang\n",
-      "1616.71\t111.37\tShu Zhou\n",
-      "1603.11\t97.63\tGuxin Jin\n",
-      "1576.46\t106.47\tTom Zhang\n"
+      "1844.28\t184.23\tGilbert\n",
+      "1834.13\t110.80\tChen Meng\n",
+      "1806.04\t103.22\tShengke Zhou\n",
+      "1747.90\t147.25\tJianfeng Guo\n",
+      "1717.27\t131.61\tXin Qiu\n",
+      "1697.10\t188.58\tPeter Zhou (absent: 3)\n",
+      "1646.72\t132.15\tYuan Zhuang\n",
+      "1625.26\t103.21\tShu Zhou\n",
+      "1598.02\t91.86\tGuxin Jin\n",
+      "1577.53\t184.97\tWilliam Tang (absent: 2)\n"
      ]
     }
    ],
@@ -620,29 +634,29 @@
       "\n",
       "Historical Rating\n",
       "Rating\tSigma\tName\n",
-      "1848.09\t157.92\tJianfeng Guo\n",
-      "1792.29\t119.89\tChen Meng (absent: 1)\n",
-      "1723.50\t108.67\tShengke Zhou (absent: 1)\n",
-      "1656.65\t236.81\tGilbert (absent: 1)\n",
-      "1654.15\t151.54\tYuan Zhuang (absent: 1)\n",
-      "1645.12\t132.55\tXin Qiu\n",
-      "1616.71\t111.37\tShu Zhou (absent: 1)\n",
-      "1611.71\t108.33\tChaofeng Zhou\n",
-      "1603.11\t97.63\tGuxin Jin (absent: 1)\n",
-      "1578.61\t93.98\tLucas Li\n",
+      "1844.28\t184.23\tGilbert (absent: 1)\n",
+      "1834.13\t110.80\tChen Meng (absent: 1)\n",
+      "1820.23\t136.24\tJianfeng Guo\n",
+      "1806.04\t103.22\tShengke Zhou (absent: 1)\n",
+      "1693.29\t119.70\tXin Qiu\n",
+      "1646.72\t132.15\tYuan Zhuang (absent: 1)\n",
+      "1625.26\t103.21\tShu Zhou (absent: 1)\n",
+      "1598.02\t91.86\tGuxin Jin (absent: 1)\n",
+      "1577.53\t184.97\tWilliam Tang (absent: 3)\n",
+      "1556.48\t100.86\tChaofeng Zhou\n",
       "\n",
       "Seasonal Rating\n",
       "Rating\tSigma\tName\n",
-      "1848.09\t157.92\tJianfeng Guo\n",
-      "1792.29\t119.89\tChen Meng (absent: 1)\n",
-      "1723.50\t108.67\tShengke Zhou (absent: 1)\n",
-      "1656.65\t236.81\tGilbert (absent: 1)\n",
-      "1654.15\t151.54\tYuan Zhuang (absent: 1)\n",
-      "1645.12\t132.55\tXin Qiu\n",
-      "1616.71\t111.37\tShu Zhou (absent: 1)\n",
-      "1611.71\t108.33\tChaofeng Zhou\n",
-      "1603.11\t97.63\tGuxin Jin (absent: 1)\n",
-      "1578.61\t93.98\tLucas Li\n"
+      "1844.28\t184.23\tGilbert (absent: 1)\n",
+      "1834.13\t110.80\tChen Meng (absent: 1)\n",
+      "1820.23\t136.24\tJianfeng Guo\n",
+      "1806.04\t103.22\tShengke Zhou (absent: 1)\n",
+      "1693.29\t119.70\tXin Qiu\n",
+      "1646.72\t132.15\tYuan Zhuang (absent: 1)\n",
+      "1625.26\t103.21\tShu Zhou (absent: 1)\n",
+      "1598.02\t91.86\tGuxin Jin (absent: 1)\n",
+      "1577.53\t184.97\tWilliam Tang (absent: 3)\n",
+      "1556.48\t100.86\tChaofeng Zhou\n"
      ]
     }
    ],
@@ -679,40 +693,40 @@
       "\n",
       "Historical Rating\n",
       "Rating\tSigma\tName\n",
-      "1928.85\t144.85\tJianfeng Guo\n",
-      "1753.02\t102.38\tShengke Zhou\n",
-      "1720.02\t110.09\tChen Meng\n",
-      "1656.65\t236.81\tGilbert (absent: 2)\n",
-      "1654.15\t151.54\tYuan Zhuang (absent: 2)\n",
-      "1642.13\t103.88\tShu Zhou\n",
-      "1609.08\t100.95\tChaofeng Zhou\n",
-      "1566.03\t100.08\tTom Zhang (absent: 1)\n",
-      "1565.03\t89.07\tLucas Li\n",
-      "1554.76\t92.53\tGuxin Jin\n",
+      "1891.30\t127.00\tJianfeng Guo\n",
+      "1844.28\t184.23\tGilbert (absent: 2)\n",
+      "1824.62\t97.75\tShengke Zhou\n",
+      "1768.51\t102.91\tChen Meng\n",
+      "1649.66\t97.15\tShu Zhou\n",
+      "1646.72\t132.15\tYuan Zhuang (absent: 2)\n",
+      "1590.85\t111.63\tXin Qiu\n",
+      "1565.34\t94.80\tChaofeng Zhou\n",
+      "1558.56\t87.58\tGuxin Jin\n",
+      "1546.44\t93.94\tTom Zhang (absent: 1)\n",
       "\n",
       "Seasonal Rating\n",
       "Rating\tSigma\tName\n",
-      "1928.85\t144.85\tJianfeng Guo\n",
-      "1753.02\t102.38\tShengke Zhou\n",
-      "1720.02\t110.09\tChen Meng\n",
-      "1656.65\t236.81\tGilbert (absent: 2)\n",
-      "1654.15\t151.54\tYuan Zhuang (absent: 2)\n",
-      "1642.13\t103.88\tShu Zhou\n",
-      "1609.08\t100.95\tChaofeng Zhou\n",
-      "1566.03\t100.08\tTom Zhang (absent: 1)\n",
-      "1565.03\t89.07\tLucas Li\n",
-      "1554.76\t92.53\tGuxin Jin\n",
+      "1891.30\t127.00\tJianfeng Guo\n",
+      "1844.28\t184.23\tGilbert (absent: 2)\n",
+      "1824.62\t97.75\tShengke Zhou\n",
+      "1768.51\t102.91\tChen Meng\n",
+      "1649.66\t97.15\tShu Zhou\n",
+      "1646.72\t132.15\tYuan Zhuang (absent: 2)\n",
+      "1590.85\t111.63\tXin Qiu\n",
+      "1565.34\t94.80\tChaofeng Zhou\n",
+      "1558.56\t87.58\tGuxin Jin\n",
+      "1546.44\t93.94\tTom Zhang (absent: 1)\n",
       "\n",
       "Gain\tAvg\tName\n",
-      "326.00\t65.20\tJianfeng Guo\n",
-      "284.20\t35.53\tChaofeng Zhou\n",
-      "248.10\t35.44\tChen Meng\n",
-      "247.70\t30.96\tShengke Zhou\n",
-      "123.60\t15.45\tShu Zhou\n",
-      "64.20\t21.40\tYuan Zhuang\n",
-      "51.20\t5.12\tGuxin Jin\n",
-      "30.00\t30.00\tGilbert\n",
-      "12.60\t1.57\tTom Zhang\n",
+      "395.50\t43.94\tShengke Zhou\n",
+      "335.80\t55.97\tJianfeng Guo\n",
+      "326.30\t40.79\tChen Meng\n",
+      "164.20\t18.24\tChaofeng Zhou\n",
+      "129.60\t14.40\tShu Zhou\n",
+      "110.00\t55.00\tGilbert\n",
+      "69.40\t17.35\tYuan Zhuang\n",
+      "45.60\t4.15\tGuxin Jin\n",
+      "13.60\t2.27\tXin Qiu\n",
       "-13.30\t-13.30\tYunke Tang\n"
      ]
     }
@@ -765,16 +779,16 @@
       "\n",
       "Historical Rating\n",
       "Rating\tSigma\tName\n",
-      "2034.31\t329.64\tFanyao Bu\n",
-      "1928.85\t144.85\tJianfeng Guo (absent: 1)\n",
-      "1753.02\t102.38\tShengke Zhou (absent: 1)\n",
-      "1720.02\t110.09\tChen Meng (absent: 1)\n",
-      "1654.15\t151.54\tYuan Zhuang (absent: 3)\n",
-      "1614.54\t94.98\tChaofeng Zhou\n",
-      "1600.77\t97.25\tShu Zhou\n",
-      "1565.03\t89.07\tLucas Li (absent: 1)\n",
-      "1545.23\t94.09\tTom Zhang\n",
-      "1527.40\t121.98\tXin Qiu (absent: 1)\n",
+      "2045.44\t327.93\tFanyao Bu\n",
+      "1891.30\t127.00\tJianfeng Guo (absent: 1)\n",
+      "1824.62\t97.75\tShengke Zhou (absent: 1)\n",
+      "1768.51\t102.91\tChen Meng (absent: 1)\n",
+      "1662.64\t153.08\tGilbert\n",
+      "1646.72\t132.15\tYuan Zhuang (absent: 3)\n",
+      "1615.46\t91.64\tShu Zhou\n",
+      "1590.85\t111.63\tXin Qiu (absent: 1)\n",
+      "1577.87\t89.80\tChaofeng Zhou\n",
+      "1560.09\t134.33\tXiner Zhang\n",
       "\n",
       "Seasonal Rating\n",
       "Rating\tSigma\tName\n",
@@ -787,7 +801,7 @@
       "1500.00\t500.00\tChen Meng (absent: 1)\n",
       "1500.00\t500.00\tLucas Li (absent: 1)\n",
       "1500.00\t500.00\tSamuel (absent: 3)\n",
-      "1500.00\t500.00\tJianfeng Guo (absent: 1)\n"
+      "1500.00\t500.00\tXin Qiu (absent: 1)\n"
      ]
     }
    ],
@@ -828,29 +842,29 @@
       "\n",
       "Historical Rating\n",
       "Rating\tSigma\tName\n",
-      "2034.31\t329.64\tFanyao Bu\n",
-      "1928.85\t144.85\tJianfeng Guo (absent: 1)\n",
-      "1753.02\t102.38\tShengke Zhou (absent: 1)\n",
-      "1720.02\t110.09\tChen Meng (absent: 1)\n",
-      "1654.15\t151.54\tYuan Zhuang (absent: 3)\n",
-      "1614.54\t94.98\tChaofeng Zhou\n",
-      "1600.77\t97.25\tShu Zhou\n",
-      "1565.03\t89.07\tLucas Li (absent: 1)\n",
-      "1545.23\t94.09\tTom Zhang\n",
-      "1527.40\t121.98\tXin Qiu (absent: 1)\n",
-      "1517.90\t238.85\tZixu Jiang\n",
-      "1489.65\t88.73\tGuxin Jin\n",
-      "1485.11\t179.73\tGilbert\n",
-      "1477.52\t154.32\tXiner Zhang\n",
-      "1466.94\t156.93\tEllen Wei (absent: 2)\n",
-      "1432.14\t105.45\tDi An\n",
-      "1406.64\t236.73\tDavid (absent: 3)\n",
-      "1396.32\t106.93\tXue Zhou\n",
-      "1395.87\t179.27\tSamuel (absent: 3)\n",
-      "1376.33\t95.51\tQuanlai Li\n",
-      "1309.61\t255.98\tGeorge (absent: 2)\n",
-      "1251.89\t125.81\tZhongtian Jiang\n",
-      "1125.05\t214.27\tRoc\n",
+      "2045.44\t327.93\tFanyao Bu\n",
+      "1891.30\t127.00\tJianfeng Guo (absent: 1)\n",
+      "1824.62\t97.75\tShengke Zhou (absent: 1)\n",
+      "1768.51\t102.91\tChen Meng (absent: 1)\n",
+      "1662.64\t153.08\tGilbert\n",
+      "1646.72\t132.15\tYuan Zhuang (absent: 3)\n",
+      "1615.46\t91.64\tShu Zhou\n",
+      "1590.85\t111.63\tXin Qiu (absent: 1)\n",
+      "1577.87\t89.80\tChaofeng Zhou\n",
+      "1560.09\t134.33\tXiner Zhang\n",
+      "1542.52\t84.68\tLucas Li (absent: 1)\n",
+      "1533.53\t238.26\tZixu Jiang\n",
+      "1533.20\t88.92\tTom Zhang\n",
+      "1501.79\t84.37\tGuxin Jin\n",
+      "1470.26\t156.56\tEllen Wei (absent: 2)\n",
+      "1425.55\t236.19\tDavid (absent: 3)\n",
+      "1406.78\t98.78\tDi An\n",
+      "1406.78\t106.72\tXue Zhou\n",
+      "1404.51\t179.00\tSamuel (absent: 3)\n",
+      "1386.57\t89.95\tQuanlai Li\n",
+      "1313.49\t254.79\tGeorge (absent: 2)\n",
+      "1269.76\t125.27\tZhongtian Jiang\n",
+      "1144.31\t214.00\tRoc\n",
       "\n",
       "Seasonal Rating\n",
       "Rating\tSigma\tName\n",
@@ -863,11 +877,11 @@
       "1500.00\t500.00\tChen Meng (absent: 1)\n",
       "1500.00\t500.00\tLucas Li (absent: 1)\n",
       "1500.00\t500.00\tSamuel (absent: 3)\n",
+      "1500.00\t500.00\tXin Qiu (absent: 1)\n",
       "1500.00\t500.00\tJianfeng Guo (absent: 1)\n",
       "1500.00\t500.00\tDavid (absent: 3)\n",
       "1500.00\t500.00\tEllen Wei (absent: 2)\n",
       "1500.00\t500.00\tYuan Zhuang (absent: 3)\n",
-      "1500.00\t500.00\tXin Qiu (absent: 1)\n",
       "1500.00\t500.00\tShengke Zhou (absent: 1)\n",
       "1500.00\t500.00\tGeorge (absent: 2)\n",
       "1500.00\t270.78\tZhongtian Jiang\n",
@@ -882,6 +896,71 @@
    ],
    "source": [
     "print_top_k_rating()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Money won: 294.00\n",
+      "Money lost: 293.60\n",
+      "\n",
+      "Historical Rating\n",
+      "Rating\tSigma\tName\n",
+      "2045.44\t327.93\tFanyao Bu (absent: 1)\n",
+      "1902.69\t116.69\tJianfeng Guo\n",
+      "1825.47\t92.61\tShengke Zhou\n",
+      "1768.51\t102.91\tChen Meng (absent: 2)\n",
+      "1670.41\t88.20\tShu Zhou\n",
+      "1662.64\t153.08\tGilbert (absent: 1)\n",
+      "1594.11\t85.63\tChaofeng Zhou\n",
+      "1584.99\t103.56\tXin Qiu\n",
+      "1542.52\t84.68\tLucas Li (absent: 2)\n",
+      "1533.53\t238.26\tZixu Jiang (absent: 1)\n",
+      "\n",
+      "Seasonal Rating\n",
+      "Rating\tSigma\tName\n",
+      "2246.28\t335.57\tFanyao Bu (absent: 1)\n",
+      "2020.86\t296.54\tQuanlai Li (absent: 1)\n",
+      "1895.04\t270.28\tJianfeng Guo\n",
+      "1798.14\t263.66\tShengke Zhou\n",
+      "1771.40\t217.80\tShu Zhou\n",
+      "1768.34\t206.10\tChaofeng Zhou\n",
+      "1668.08\t203.51\tDi An\n",
+      "1585.24\t271.33\tZixu Jiang (absent: 1)\n",
+      "1547.37\t257.03\tXin Qiu\n",
+      "1500.00\t500.00\tChen Meng (absent: 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2019-11-15, Chinese Table Only\n",
+    "\n",
+    "george = \"George\"\n",
+    "sam = \"Samuel\"\n",
+    "\n",
+    "Game({\n",
+    "    di_an: 7,\n",
+    "    george: 5.4,\n",
+    "    jianfeng_guo: 63.4,\n",
+    "    tom_zhang: -120,\n",
+    "    chaofeng_zhou: 25.6,\n",
+    "    sam: -47.6,\n",
+    "    zhongtian_jiang: -27,\n",
+    "    xin_qiu: 6.2,\n",
+    "    shengke_zhou: 51.4,\n",
+    "    shu_zhou: 135,\n",
+    "    guxin_jin: -6,\n",
+    "    xiner_zhang: -93\n",
+    "})\n",
+    "\n",
+    "print_top_k_rating(10)"
    ]
   },
   {
